<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Edit button-->
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="Edit"
        app:showAsAction="always" />
    <!--Delete button-->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="Delete"
        app:showAsAction="always" />
</menu>