<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--Accept Button-->
    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_check"
        android:title="Accept"
        app:showAsAction="always" />
</menu>
