<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".administratorUsersPets.AdministratorUsersPetsListActivity">

    <!--add-->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="Add"
        app:showAsAction="always" />
</menu>