<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".administratorQueryDetail.AdministratorQueryDetailActivity">

    <!--add-->
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:title="Reply"
        app:showAsAction="always"
        android:iconTint="@color/colorPrimary"/>
</menu>