<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".administratorQueryAnswer.AdministratorQueryAnswerActivity"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_answer_query_edit_text"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:inputType="textMultiLine"
            android:textColor="?attr/colorAccent"
            android:gravity="top|left"
            android:scrollbarStyle="insideOverlay"
            android:padding="10dp"
            />


        <ImageButton
            android:id="@+id/user_send_query_answer_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="top|right"
            android:layout_marginTop="25dp"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:src="@drawable/ic_send"
            android:onClick="onSendButtonClicked"
            android:contentDescription="TODO" />

    </LinearLayout>



</LinearLayout>