<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inbox_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    tools:context=".administratorInbox.AdministratorInboxActivity"
    tools:listitem="@layout/inbox_list_content"/>